# CavEX

./: .gitignore  AGENT_IMPROVEMENT_LOG.md  AI_PLAYER.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  config.json  config_pc.json  controls.md  gen_world.py
.claude/skills/dev-native-pc/: SKILL.md
.claude/skills/gen-beta-world/: SKILL.md
.claude/skills/overnight-run/: SKILL.md
.claude/skills/run-wii-dolphin/: SKILL.md
.claude/skills/work-on-an-issue/: SKILL.md
.claude/skills/write-bulletproof-issue/: SKILL.md
.github/workflows/: tests.yml
badges/: coverage.json
demos/: creative-inventory.txt  creative-mode.txt  map-open.txt  walk-forward.txt
docs/: AGENT_RESEARCH_NOTES.md
docs/tutorials/: bubble-elevator.md  fireworks.md
scripts/: agent_eval.py  agent_live.py  agent_planner.py  agent_play_demo.py  agent_skills.py  ai_playtest.py  build_pc.sh  capture_demo.sh  check_test_coverage.sh  export_coverage_badge.sh  gameplay_assess.py  make_demo_gif.sh  make_demo_gif_pillow.py  mem_guard.py  nav.py  print_coverage_summary.sh  run_pc.sh  run_tests.sh
source/: chunk.c  chunk.h  chunk_mesher.c  chunk_storage.c  daytime.c  daytime.h  lighting.c  main.c  particle.c  particle.h  world.c  world.h
source/block/: block_bed.c  block_bubble_column.c  block_button.c  block_cake.c  block_candle.c  block_carpet.c  block_door.c  block_lever.c  block_oak_wood.c  block_sapling.c  block_smooth_sandstone.c  block_smooth_stone.c  block_sponge.c  block_tnt.c  blocks.c  blocks.h  blocks_data.h  blocks_util.c
source/entity/: entity.c  entity.h  entity_boat.c  entity_id.c  entity_item.c  entity_local_player.c  entity_minecart.c
source/game/: camera.c  game_state.h  state_export.c  state_export.h
source/game/gui/: creative_inventory_list.c  creative_inventory_list.h  map_projection.c  map_projection.h  screen.h  screen_creative_inventory.c  screen_ingame.c  screen_inventory.c  screen_map.c  screen_select_world.c
source/graphics/: gfx_util.c  render_block.c  render_block.h
source/item/: items.c  items.h  items_object.h  recipe.c  tool.c  tool.h
source/item/items/: item_bed.c  item_boat.c  item_cake.c  item_firework.c  item_minecart.c  item_motor.c
source/network/: client_interface.c  client_interface.h  level_archive.c  level_archive.h  region_archive.c  server_interface.h  server_local.c  server_local.h  server_world.c  server_world.h
source/platform/: demo_input.c  demo_input.h  displaylist.h  gfx.h  input.c  input.h  input_config.c
source/platform/pc/: gfx.c
source/platform/wii/: displaylist.c  gfx.c
tests/: CMakeLists.txt  harness.h  test_aabb.c  test_block_tnt.c  test_blocks.c  test_boat.c  test_buffer.c  test_chunk.c  test_config.c  test_creative_inventory.c  test_daytime.c  test_demo.c  test_double_tap.c  test_entity.c  test_entity_tick.c  test_face_occlusion.c  test_firework.c  test_input_routing.c  test_inventory.c  test_json.c  test_level_archive.c  test_lighting.c  test_main.c  test_map.c  test_minecart.c  test_nbt.c  test_path.c  test_path.h  test_recipe.c  test_region.c  test_region_migrate.c  test_stack.c  test_state_export.c  test_tool.c  test_util.c  test_window.c
tests/fixtures/: config_valid.json
tests/stubs/: blocks_stub.c  blocks_stub.h  chunk_link_stub.c  entity_player_stub.c  game_state_stub.c  items_stub.c  items_stub.h  render_stub.c  server_world_stub.c  server_world_stub.h
